--- a/v3/APL_v3_android_menu/.project
+++ b/v3/APL_v3_android_menu/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>APL</name>
+	<name>APL2</name>
 	<comment></comment>
 	<projects>
 	</projects>
