Subject: auto downloader and extraction of tar.gz
Description:

 1) initial help_pop up
 2) tar ball download and extraction
 3) user can place an image file in /mnt/sdcard OR /mnt/extsd
 4) NO need to push 'aakash.sh' and 'preinstall.sh' in respective locations manually

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="lib" path="/home/nutan/Downloads/ant-1.6.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
