--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,9 +5,9 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="8" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <application
         android:background="@null"
         android:icon="@drawable/apl"
@@ -67,5 +67,5 @@
             android:label="@string/app_name8" >
         </activity>
     </application>
-
+	
 </manifest>
