--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,8 @@
         <activity
             android:name=".APLActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,47 +25,58 @@
         </activity>
         <activity
             android:name="com.aakash.lab.sci"
-            android:label="@string/app_name1" >
+            android:label="@string/app_name1" 
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name="com.aakash.lab.c"
-            android:label="@string/app_name2" >
+            android:label="@string/app_name2" 
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name="com.aakash.lab.cp"
-            android:label="@string/app_name3" >
+            android:label="@string/app_name3" 
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name="com.aakash.lab.py"
-            android:label="@string/app_name4" >
+            android:label="@string/app_name4" 
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name="com.aakash.lab.ImagePlotActivity"
-            android:label="@string/app_name6" >
+            android:label="@string/app_name6" 
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".OnlyExt"
-            android:label="@string/app_name4" >
+            android:label="@string/app_name4" 
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".chelp"
-            android:label="@string/app_name7" >
+            android:label="@string/app_name7"
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".cphelp"
-            android:label="@string/app_name7" >
+            android:label="@string/app_name7" 
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".pyhelp"
-            android:label="@string/app_name7" >
+            android:label="@string/app_name7" 
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".scihelp"
-            android:label="@string/app_name7" >
+            android:label="@string/app_name7" 
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name="com.aakash.lab.about"
-            android:label="@string/app_name8" >
+            android:label="@string/app_name8" 
+            android:screenOrientation="landscape">
         </activity>
     </application>
 	
